# gamification-engine

./: pyproject.toml
gengine/: __init__.py  metadata.py  wsgiutil.py
gengine/app/: admin.py  cache.py  formular.py  leaderboard.py  model.py  permissions.py  push.py  registries.py  route.py  tasks.py  tasksystem.py  views.py
gengine/app/alembic/: env.py
gengine/app/alembic/versions/: 2012674516fc_has_been_pushed.py  3512efb5496d_additional_public_data.py  46e4971dc46f_extended_groups.py  62026366cd60_evaluation_timezone.py  65c7a32b7322_achievement_date_unique.py  87dfedb58883_goal_triggers_achievement_date.py  8e65de1ed535_force_password_change.py  a90076b18837_tasks_and_shift.py  d4a70083f72e_add_user_language.py  e41a1c7304bb_grouptype_relevance2.py  e8799ed00992_grouptype_relevance.py
gengine/app/api/: __init__.py  resources.py  schemas.py
gengine/app/jsscripts/: __init__.py
gengine/app/tests/: base.py  db.py  helpers.py  runner.py  test_achievement1.py
gengine/app/tests_old/: base.py  db.py  helpers.py  test_achievement1.py  test_achievement_integration_tests.py  test_device.py  test_eval_types_and_rewards.py  test_goal.py  test_groups.py  test_value.py
gengine/base/: cache.py  errors.py  model.py  monkeypatch_flaskadmin.py  util.py
gengine/maintenance/scripts/: generate_erd.py  generate_revision.py  initializedb.py  push_messages.py  scheduler_beat.py  scheduler_worker.py
